<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.Registrer.Registrer">

    <ProgressBar
        android:id="@+id/prgB_registrer"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/TextRegistrer"
            android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Lyt_Reg_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/NameRegistrer"
                android:inputType="text"
                 />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lyt_Reg_SecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserLastName"
                android:inputType="text"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/SecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Lyt_Reg_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserMail"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/SendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lyt_Reg_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserPass"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/SendPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_SendRegistrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:fontFamily="sans-serif-black"
                android:hint="@string/Button_Registrer"
                android:textColorHint="@color/White"
                android:textSize="18sp"
                android:textStyle="bold"
                app:iconTint="#EAE4E4" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

