<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorfont1"
    android:padding="50px"
    tools:context=".ui.Login.login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorfont2"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:lottie_imageAssetsFolder="lf30_editor_j9wlmb0w.json"
            app:lottie_fileName="lf30_editor_j9wlmb0w.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:hint="Bienvenido al Examen Practico de Aldair"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lyt_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edt_User"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/EdEmail"
                android:inputType="textEmailAddress"
                android:maxLength="80"
                />
        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Lyt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/EdtPass"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    app:passwordToggleEnabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
           >
            <com.google.android.material.button.MaterialButton
               android:id="@+id/Btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Button_Login"
                android:backgroundTint="@color/Orange"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrer"
                android:backgroundTint="@color/buttonColorSalmon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Registrer"/>


        </com.google.android.material.button.MaterialButtonToggleGroup>
        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>

